<resources>
    <string name="app_name">TopImoveis App v1.0 </string>
    <string name="logon">Efetuar Logon</string>
    <string name="textLogin">E-mail:</string>
    <string name="textSenha">Senha:</string>
    <string name="radioCliente">Cliente</string>
    <string name="radioAdm">Administrador</string>
    <string name="buttonLogin">Entrar</string>
    <string name="buttonCadastrar">Cadastrar</string>
    <string name="textPergunta">Não possui login? Pode se cadastrar abaixo:</string>
    <string name="sobre">Sobre</string>
    <string name="textCadastrarUsuario">Cadastro de Usuário</string>
    <string name="ImgUsuarios">usuarios</string>
    <string name="textviewNomeCompl">Nome Completo:</string>
    <string name="nome" />
    <string name="editTextLogin" />
    <string name="textviewConfSenha">Confirmar Senha:</string>
    <string name="buttonCadastrarImovel">Cadastrar Imóvel</string>
    <string name="buttonRemoverImovel">Remover Imóvel</string>
    <string name="buttonAterarImvovel">Alterar Imóvel</string>
    <string name="textviewTituloCliente">Selecione um imóvel abaixo para ver detalhes:</string>
    <string name="textviewEndereco">Endereço:</string>
    <string name="editTextEndereco" />
    <string name="textviewNumQuartos">Nº de Quartos: </string>
    <string name="textviewNumSuites">Nº de Suítes: </string>
    <string name="textviewVagas">Nº de Vagas de Garagem: </string>
    <string name="textviewCusto">Custo: </string>
    <string name="custo_r">Custo do Aluguel: R$</string>
    <string name="buttonListarAlugados">Listar Imóveis Clicados</string>
    <string name="buttonListarClientes">Listar Clientes</string>
    <string name="Nome">Nome:</string>


</resources>
