<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/linhaEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewEndereco"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewEndereco"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/linhaQuartos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewNumQuartos"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewNumQuartos"
        android:layout_below="@+id/linhaEndereco"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/linhaSuites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewNumSuites"
        android:layout_below="@+id/linhaQuartos"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewNumSuites"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <TextView
        android:id="@+id/linhaVagas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewVagas"
        android:layout_below="@+id/linhaSuites"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewVagas"
        android:layout_below="@+id/linhaSuites"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:id="@+id/linhaCusto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewCusto"
        android:textStyle="bold"
        android:layout_below="@+id/linhaVagas"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custo_r"
        android:textStyle="bold"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

</RelativeLayout>
